--- a/stylesheet.css
+++ b/stylesheet.css
@@ -98,6 +98,8 @@ footer{
 .iconspecs{
     width: 75;
     height: 75;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 .iconbox{
     text-align: center;
