--- a/stylesheet.css
+++ b/stylesheet.css
@@ -96,8 +96,8 @@ footer{
     padding-top: 20px;
 }
 .iconspecs{
-    width: 75;
-    height: 75;
+    width: 75px;
+    height: 75px;
 }
 .iconbox{
     text-align: center;
